# muerta-todo-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp
src/apps/cli/: main.cpp
src/core/apps/cli/: main.cpp
src/core/container/: container.cpp  container.h
src/core/infra/: sqlite.cpp  sqlite.h
src/core/repository/todo/: models.h  todo.cpp  todo.h
